# uv-workspace-learning

./: .gitignore  README.md  pyproject.toml
src/restapi/: __main__.py  hello.py
