[project]
name = "restapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "login",
    "api",
    "common",
    "tqdm>=4,<5",
]

[tool.uv.sources]
login = { workspace = true }
api = { workspace = true }
common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/restapi"]


[tool.uv.workspace]
members = ["packages/*", "login"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
